kubernetes/services-backd-arm/03-auth-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  labels:
    app: auth
  namespace: backd
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - name: auth
        image: backd/auth:arm
        imagePullPolicy: Always
        ports:
        - containerPort: 8083
        - containerPort: 8183
