kubernetes/services-backd-arm/02-admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin
  labels:
    app: admin
  namespace: backd
spec:
  ports:
  - name: "api"
    port: 8084
    targetPort: 8084
  - name: "metrics"
    port: 8184
    targetPort: 8184
  selector:
    app: admin
status:
  loadBalancer: {}
