kubernetes/services-backd-arm/04-auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth
  labels:
    app: auth
  namespace: backd
spec:
  ports:
  - name: "api"
    port: 8083
    targetPort: 8083
  - name: "metrics"
    port: 8183
    targetPort: 8183
  selector:
    app: auth
status:
  loadBalancer: {}
