kubernetes/services-backd-arm/06-sessions-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sessions
  labels:
    app: sessions
  namespace: backd
spec:
  ports:
  - name: "api"
    port: 8082
    targetPort: 8082
  - name: "metrics"
    port: 8182
    targetPort: 8182
  selector:
    app: sessions
status:
  loadBalancer: {}
